@@ -1,6 +1,8 @@
 AUX uniloader.confd 304 SHA256 9f33153833f91dc7fa2f577b2ee9c09cb99c6b0f04417850da6ce5cfa8fa5580 SHA512 8a9a04e555740eefd0e94509904e74a466fac45efe0297136be30a40b610869a654c608924d6c482ca20c1d391c3173ef27be591eed9b36cbfa258af4784bce7 WHIRLPOOL 0358096b53e7b5de2ceec8039e9554317c88e8e5f9b66a21b2dadf2f493c7993436260f9d4eea90edd9cb9f589237649599d16f0c02926caa53e61de7cd11ab0
 AUX uniloader.initd 783 SHA256 f9d76ba0a0c945d88e67819d1e9a8b6f4131dd6bfb2e2f0fee3ec5be1fa10b32 SHA512 9370ab062ac37234e1767d2a18d62da8a2aa1cfdc0b03fa5e4cd840dcfb2c11d6d1d3a4d35ba12a83de3529329be63aa2b76dc365edec913dad6946c9c974628 WHIRLPOOL e23b82b6b330d4bb32bf214c44b698e4622e7def13bfa0cca891c3cb3b67d922485e17ea3547fc516b16a846fb14cd89066342943b1a4b62b3bb7e23c511898c
 DIST uniloader-0.6.0.tar.gz 12290148 SHA256 1fecf244b9fafefd9cb7012a98e0365d95ba424521738b74ace830526d0a6b3c SHA512 9eefede06f73bbe052a42f21db63480a8ac06c6114d9be326acbcc56a25f68c45c8811963d1174eee7066f16502ec0e4ca60e7b9f8fa7985056ac2a98d9f1ac3 WHIRLPOOL 8fdadc5cb2b28f56437beb301a60ad06d4beb6bcca51054d21209c89f745f75a54c009f11a5b264b6f7e539d514d104f8fc82083fc62e5ec693edd02b742be33
+DIST uniloader-0.6.5.tar.gz 12502438 SHA256 d804a25b93b58956f5a6936fc8a518dfc74f07db361b8f6852e097867ee087e3 SHA512 4e005f24545c46ed7db6b5833562974b2ded579f4251ef236aca38cc491e4ecf3aa9e4acf76d6416d7520925710714033eb5ed39bcdd71c6e0667f6f124e4a0c WHIRLPOOL e6be66205e2d1cfcbd81a7449dd7708b89a6454a6e151fcd0a4d3b87d21dceb22d43217b7697278a5cc83b2329692d040d9c3e3816fac6a25b8efe97403bcbd8
 EBUILD uniloader-0.6.0.ebuild 912 SHA256 84d0d81b3f81b56c480c31c983401a4fd84c5f10ef0f8970c19229d93dd8f228 SHA512 156a0ca8682682a1e399d475a74356d76406b7f03e7fd4396d544e8a88658151fa33d2006a99bb9dfa26dede2cd7f3f525e2436518902be76322a3a2245ff280 WHIRLPOOL 6c0c728a289717e326fe37df03273bf9d25aad9559f1246d0f022466412d750d9bd1f4a1040b3e4880fc4f118176c441ce82cbce1b3de56dfdd1ea6eba7deae9
-MISC ChangeLog 236 SHA256 c5f20f6997cbb640c33382d47af7c812cde91ebe78ded852e39f626ce4090fa9 SHA512 22e7295ce311148cecd9cca1499cd8dbca535c63ba529a674ca5df82751eece9815082ff42c260e876df3b3d999f0e38c9012cbb8004cd949122b6292da9fdea WHIRLPOOL 8cfebab86388723ca08ce2dc68bf94ed26ca3095214168dcbfa046fbe065574cccabc5db4843b7a5dd384b83a035bb893d7d1d248d798e6286596b1ef8a4a18e
+EBUILD uniloader-0.6.5.ebuild 912 SHA256 84d0d81b3f81b56c480c31c983401a4fd84c5f10ef0f8970c19229d93dd8f228 SHA512 156a0ca8682682a1e399d475a74356d76406b7f03e7fd4396d544e8a88658151fa33d2006a99bb9dfa26dede2cd7f3f525e2436518902be76322a3a2245ff280 WHIRLPOOL 6c0c728a289717e326fe37df03273bf9d25aad9559f1246d0f022466412d750d9bd1f4a1040b3e4880fc4f118176c441ce82cbce1b3de56dfdd1ea6eba7deae9
+MISC ChangeLog 390 SHA256 3a9fd982c22b35898508a17eb2ed5585fd870948f3f599c9b3c36463447d5172 SHA512 480f4530396cbc6a47d10732b73787f52b52080a4acce279df6a5e846275281334c79856240bda76609aa8d43ac823e53d769aa03daabd6c8cf2f49a4105e205 WHIRLPOOL 25bde7b733211dfee33fcc283fdb00f0f0db66774e294051e75ceaaa6c868fad61201a679f3435d63e9e8d9057096fd1e8b2236eaf2f2abe15aa7615b0de40bf
 MISC metadata.xml 246 SHA256 7865004b5e3824d4a508188497473a0a56c96498237986c4f1f692151bf0a01e SHA512 482630597bd2d56c1eaed7099225b4475aec8768e20bad70ea9d6b96791fa38359ba572ab9ad0fc7ea72f1ab736ed1e92fc3c156c3427b008c7220285edce11c WHIRLPOOL d7c29be66bc7bb8ea3a5c4948597ab70efd83982aaa759f621477aefa2a1203186473bc0ac961685249cf48560e011e1d457a934982c562392c289c85edd39a0
